syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "Timestamp.proto";

// Deprecated
message ConsensusTopicDefinition {
    string memo = 1;
    Timestamp validStartTime = 2;
    Timestamp expirationTime = 3;
    Key adminKey = 4;
    Key submitKey = 5;
    Timestamp lastUpdateTime = 6;
    Timestamp creationTime = 7;
}
